--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Montserrat", sans-serif;
-  background-color: #ffffff;
+  background-color: #e5e5e5;
   color: #595959;
   line-height: 1.22;
 }
@@ -29,10 +29,9 @@ address {
 
 .container {
   width: 1170px;
-  padding-left: 15px;
-  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  background-color: #ffffff;
 }
 
 .wrapper {
@@ -140,4 +139,7 @@ address {
   margin-left: 5px;
   text-decoration: none;
   color: #595959;
+}
+.content__list-item {
+  margin-bottom: 20px;
 }/*# sourceMappingURL=main.css.map */
